*
* 1.1.6
*

- New MIBs added: EF-6000-MIB, ES-1000-MIB, IBM-6611-APPN-MIB, IBM-MIB,
  IBMCPU-MIB
- Fixed interoperability problems with IBM AS/400 SNMP agent
- AIX support improved


*
* 1.1.5
*

- Added "foreach" operator in NXSL
- New NXSL functions: GetDCIValueByName, GetDCIValueByDescription
- New attribute "comments" in NXSL classes "Node" and "NetObj"
- Dashboard configuration in console improved
- Database upgrade bug fixed
- Solaris support improved
- Many small improvements in management console


*
* 1.1.4
*

- Implemented named parameters for events
- Added integration script for HP EVA disk arrays
- Added driver for Netscreen firewalls
- Usage of DNS names instead of IP address for defining primary
  communication address is now supported (for better support of nodes with
  dynamic IPs)
- New MIBs added: ATM-TC-MIB, CISCO-BRIDGE-EXT-MIB, CISCO-IF-EXTENSION-MIB,
  CISCO-L2L3-INTERFACE-CONFIG-MIB, CISCO-PRIVATE-VLAN-MIB,
  CISCO-VLAN-IFTABLE-RELATIONSHIP-MIB, DVMRP-MIB, IGMP-MIB, IPV6-TC,
  RAPID-CITY-BAY-STACK, RC-MLT-MIB
- Mobile client for Android introduced
- Many small improvements in management console
- Fixed some problems with database export/import
- Fixed issues: #328, #329, #330


*
* 1.1.3
*

- Added SMS driver for Portech MV-37x VoIP GSM gateways
- Fixed serious memory leaks in server
- Fixed compilation problems on some Linux distributions
- Multiple fixes and minor improvements in server and management console


*
* 1.1.2
*

- Added VLAN view in management console
- OpenStreetMap support improved; added local cache for map images
- Added option to use alternative tile server for geographic maps
- Geographic maps now can be used as background for network maps
- Implemented hierarchical maps
- New MIBs added: POLYCOM-RMX-MIB
- Multiple fixes and minor improvements in management console


*
* 1.1.1
*

- Network device drivers introduced
- Added drivers for Avaya ERS switches