@@ -2,10 +2,13 @@
 * 1.1.6
 *
 
+- Added possibility to run different subagents under different
+  user accounts
 - New MIBs added: EF-6000-MIB, ES-1000-MIB, IBM-6611-APPN-MIB, IBM-MIB,
   IBMCPU-MIB
 - Fixed interoperability problems with IBM AS/400 SNMP agent
 - AIX support improved
+- Many small improvements in management console
 
 
 *
